# xmodem-gateway

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  kermit.html  usermanual.html
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
contrib/systemd/: ethernet-gateway.service  vintage-gateway.service
proptest-regressions/: telnet.txt
src/: aichat.rs  config.rs  gui.rs  kermit.rs  logger.rs  main.rs  serial.rs  ssh.rs  telnet.rs  tnio.rs  webbrowser.rs  xmodem.rs  zmodem.rs
tests/: binary_e2e.rs
tests/fixtures/: zmodem_batch_a.payload  zmodem_tiny.payload
