[package]
name = "xmodem-gateway"
version = "0.3.1"
edition = "2024"
authors = ["Ricky Bryce"]
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3"
libc = "0.2"
russh = "0.60"
ureq = "3"
serde_json = "1"
html2text = "0.14"
url = "2"
serialport = "4"
bytes = "1"
rand = "0.10"
if-addrs = "0.15"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui_extras = { version = "0.34", features = ["image"] }
