[package]
name = "vintage-gateway"
version = "0.4.0"
edition = "2024"
authors = ["Ricky Bryce"]
license = "GPL-3.0-or-later"
description = "Telnet/SSH gateway and Hayes AT modem emulator for retro terminals — PETSCII, ANSI, and ASCII. Bridges Commodore 64, CP/M, and similar machines to modern networks with XMODEM/XMODEM-1K/YMODEM/ZMODEM file transfer, a web browser, AI chat, weather, SSH and telnet gateways."
repository = "https://github.com/rickybryce/vintage-gateway"
homepage = "https://github.com/rickybryce/vintage-gateway"
readme = "README.md"
keywords = ["telnet", "ssh", "zmodem", "xmodem", "retrocomputing"]
categories = ["command-line-utilities", "network-programming", "emulators"]
rust-version = "1.87"
# Exclude build artifacts and dev-only files from the published crate.
exclude = [
    "/target",
    "/proptest-regressions",
    "/.github",
    "/index.html",
    "*.AppImage",
    "vgateway.conf",
    "CLAUDE.md",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3"
libc = "0.2"
russh = "0.60"
ureq = "3"
serde_json = "1"
html2text = "0.14"
url = "2"
serialport = "4"
bytes = "1"
rand = "0.10"
if-addrs = "0.15"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui_extras = { version = "0.34", features = ["image"] }
arboard = { version = "3", default-features = false }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["test-util"] }
